--- a/style.css
+++ b/style.css
@@ -16,6 +16,28 @@ body {
     padding: 20px;
 }
 
+footer {
+    text-align: center;
+    font-size: 18px;
+    text-shadow: 1px 1px 2px black;
+    padding-top: 20px;
+    padding-bottom: -10px;
+    color: aliceblue;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    
+}
+
+a {
+    color: aliceblue;
+    text-decoration: none;
+}
+
+a:hover {
+    color: aliceblue;
+    text-decoration: underline;
+}
+
 .container {
     display: flex;
     flex-direction: row;
@@ -25,9 +47,54 @@ body {
 
 .board {
     background-color: rgb(222, 15, 53);
+    padding: 20px;
     border-radius: 25px;
     width: 1600px;
     height: 800px;
     box-shadow: 2px 2px 4px black;
     text-align: center;
+}
+
+.btn {
+    font-size: 32px;
+    font-family: 'MyFont';
+    font-weight: lighter;
+    color: rgb(255, 217, 0);
+    border: 3px solid rgb(142, 2, 2);
+    background-color: rgb(222, 15, 53);
+    border-radius: 10px;
+    width: 120px;
+    height: 60px;
+    cursor: pointer;
+}
+
+.btn:hover {
+    border: 4px solid rgb(142, 2, 2);
+    background-color: rgb(249, 14, 57);
+    text-shadow: 0.5px 0.5px 1px black;
+}
+
+.btnContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 20px;
+}
+
+.decBtn {
+    font-size: 190px;
+    font-weight: lighter;
+    text-align: center;
+    width: 180px;
+    height: 180px;
+    border-radius: 3ch;
+    border: 0;
+    background-color: rgb(164, 164, 164);
+    box-shadow: 1px 1px 2px black;
+}
+
+.decoration {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
