--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@ h1 {
     font-size: 70px;
     color: rgb(255, 217, 0);
     text-shadow: 1px 1px 1px black;
+    margin-top: -2px;
+    margin-bottom: 30px;
 }
 
 body {
@@ -21,7 +23,7 @@ footer {
     font-size: 18px;
     text-shadow: 1px 1px 2px black;
     padding-top: 20px;
-    padding-bottom: -10px;
+    margin-bottom: -20px;
     color: aliceblue;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
@@ -49,10 +51,11 @@ a:hover {
     background-color: rgb(222, 15, 53);
     padding: 20px;
     border-radius: 25px;
-    width: 1600px;
-    height: 800px;
+    width: 1400px;
+    height: 900px;
     box-shadow: 2px 2px 4px black;
     text-align: center;
+    
 }
 
 .btn {
@@ -65,6 +68,7 @@ a:hover {
     border-radius: 10px;
     width: 120px;
     height: 60px;
+    margin-top: 40px;
     cursor: pointer;
 }
 
@@ -97,4 +101,47 @@ a:hover {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+}
+
+.gridContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.grid {
+    background-color: white;
+    box-shadow: 2px 2px 4px black;
+    display: inline-grid;
+    grid-template-columns: repeat(16, 2fr);
+    grid-template-rows: repeat(16, 2fr);
+    border-radius: 5px;
+    height: 575px;
+    width: 575px;
+}
+
+.quantity {
+    font-size: 45px;
+    font-family: 'MyFont';
+    font-weight: lighter;
+    color: rgb(255, 217, 0);
+    text-shadow: 1px 1px 2px black;
+    margin-top: 30px;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
+input {
+    border: 3px solid rgb(142, 2, 2);
+    border-radius: 20ch;
+    height: 40px;
+    width: 100px;
+    background-color: rgb(222, 15, 53);
+    font-size: 30px;
+    font-weight: bold;
+    color: rgb(255, 217, 0);
+    font-family: 'Courier New', Courier, monospace;
+    box-shadow: 1px 1px 2px black;
+    
 }
