--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ a:hover {
 .board {
     background-color: rgb(222, 15, 53);
     padding: 20px;
-    border: 2px solid black;
+    border: 1px solid black;
     border-radius: 25px;
     width: 1200px;
     height: 900px;
@@ -144,5 +144,6 @@ input {
     color: rgb(255, 217, 0);
     font-family: 'Courier New', Courier, monospace;
     box-shadow: 1px 1px 2px black;
+    text-shadow: 1px 1px 2px black;
     
 }
