--- a/style.css
+++ b/style.css
@@ -6,26 +6,25 @@
 h1 {
     font-family: 'MyFont';
     font-weight: lighter;
-    font-size: 70px;
+    font-size: 60px;
     color: rgb(255, 217, 0);
     text-shadow: 1px 1px 1px black;
-    margin-top: -2px;
-    margin-bottom: 30px;
+    margin-top: 2px;
+    margin-bottom: 0px;
 }
 
 body {
-    background-color: rgb(59, 83, 83);
-    padding: 20px;
+    background-color: rgb(53, 73, 73);
+    padding: 40px;
 }
 
 footer {
     text-align: center;
-    font-size: 18px;
-    text-shadow: 1px 1px 2px black;
-    padding-top: 20px;
-    margin-bottom: -20px;
+    font-size: 14px;
+    padding-top: 12px;
+    margin-bottom: -40px;
     color: aliceblue;
-    font-weight: bold;
+    font-weight: lighter;
     font-family: Arial, Helvetica, sans-serif;
     
 }
@@ -49,14 +48,31 @@ a:hover {
 
 .board {
     background-color: rgb(222, 15, 53);
-    padding: 20px;
+    padding: 10px;
     border: 1px solid black;
-    border-radius: 25px;
-    width: 1200px;
-    height: 900px;
-    box-shadow: 2px 2px 4px black;
+    border-radius: 40px;
+    width: 680px;
+    height: 645px;
+    box-shadow: 1px 1px 4px black;
     text-align: center;
     
+}
+
+#colorPicker {
+    border-radius: 1ch;
+    width: 60px;
+    height: 60px;
+    margin-top: 40px;
+    cursor: pointer;
+    padding: 3px;
+    background-color: rgb(222, 15, 53);
+    border: 3px solid rgb(142, 2, 2);
+}
+
+#colorPicker:hover {
+    border: 3px solid rgb(142, 2, 2);
+    background-color: rgb(249, 14, 57);
+    text-shadow: 0.5px 0.5px 1px black;
 }
 
 .btn {
@@ -74,7 +90,7 @@ a:hover {
 }
 
 .btn:hover {
-    border: 4px solid rgb(142, 2, 2);
+    border: 3px solid rgb(142, 2, 2);
     background-color: rgb(249, 14, 57);
     text-shadow: 0.5px 0.5px 1px black;
 }
@@ -84,24 +100,24 @@ a:hover {
     flex-direction: row;
     justify-content: center;
     gap: 20px;
+    margin-top: -30px;
 }
 
-.decBtn {
-    font-size: 190px;
-    font-weight: lighter;
-    text-align: center;
-    width: 180px;
-    height: 180px;
-    border-radius: 3ch;
-    border: 0;
-    background-color: rgb(164, 164, 164);
-    box-shadow: 1px 1px 2px black;
+.decSpan {
+    width: 80px;
+    height: 80px;
+    border-radius: 10ch;
+    border: 7px solid grey;
+    border-style:dotted;
+    background-color: rgb(217, 217, 217);
 }
 
 .decoration {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
+    gap: 400px;
+    margin-top: -30px;
 }
 
 .gridContainer {
@@ -111,39 +127,54 @@ a:hover {
 }
 
 .grid {
-    background-color: white;
-    box-shadow: 2px 2px 4px black;
+    /* box-shadow: 2px 2px 4px black; */
     display: inline-grid;
+    border: 1px solid black;
     grid-template-columns: repeat(16, 2fr);
     grid-template-rows: repeat(16, 2fr);
     border-radius: 5px;
-    height: 575px;
-    width: 575px;
+    height: 375px;
+    width: 375px;
+    background-color: whitesmoke;
 }
 
-.quantity {
-    font-size: 45px;
-    font-family: 'MyFont';
-    font-weight: lighter;
-    color: rgb(255, 217, 0);
-    text-shadow: 1px 1px 2px black;
-    margin-top: 30px;
+
+.gridSlider {
     display: flex;
+    flex-direction: row;
     justify-content: center;
-    gap: 10px;
+    margin-top: 10px;
+    gap: 15px;
 }
 
-input {
-    border: 3px solid rgb(142, 2, 2);
-    border-radius: 20ch;
-    height: 40px;
-    width: 100px;
-    background-color: rgb(222, 15, 53);
+.sliderValue {
     font-size: 30px;
-    font-weight: bold;
     color: rgb(255, 217, 0);
-    font-family: 'Courier New', Courier, monospace;
-    box-shadow: 1px 1px 2px black;
-    text-shadow: 1px 1px 2px black;
-    
+    font-weight: lighter;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    max-width: 20px;
+}
+
+.sliderDiv {
+    padding-top: 10px;
+    padding-left: 12px;
+}
+
+#slider {
+    -webkit-appearance: none;
+    background-color: rgb(255, 217, 0);
+    border-radius: 10px;
+    height: 2px;
+    width: 170px;
+    cursor: pointer;
+}
+
+#slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    border: 2px solid rgb(213, 187, 43);
+    border-radius: 20ch;
+    height: 20px;
+    max-width: 20px;
+    background-color: rgb(255, 217, 0);
 }
